--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1>Our Team Portfolio</h1>
     <p>Welcome to our team portfolio! Click a member to view their resume.</p>
     <ul>
-      <li><a href="member1.html">Luis Capili</a></li>
+      <li><a href="luis.html">Luis Capili</a></li>
       <li><a href="member2.html">Harry De Guzman</a></li>
       <li><a href="member3.html">Lester Tiglao</a></li>
     </ul>
