--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>Welcome to our team portfolio! Click a member to view their resume.</p>
     <ul>
       <li><a href="luis.html">Luis Capili</a></li>
-      <li><a href="member2.html">Harry De Guzman</a></li>
+      <li><a href="harry.html">Harry De Guzman</a></li>
       <li><a href="member3.html">Lester Tiglao</a></li>
     </ul>
   </div>
