finished codegit add luis.html

--- a/luis.html
+++ b/luis.html
@@ -149,6 +149,39 @@
         </ul>
       </section>
     </div>
+
+     <div class="right">
+      <h1>Luis Capili</h1>
+      <h2>UX/UI Designer</h2>
+
+      <section>
+        <h3>Education</h3>
+        <ul>
+          <li><strong>Tarlac State University</strong> – BS Information Technology</li>
+          <li><strong>Senior High School</strong> – ICT Track</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Computer Skills</h3>
+        <ul>
+          <li>Figma </li>
+          <li>Wireframing & Prototyping</li>
+          <li>HTML & CSS</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Work Experience</h3>
+        <ul>
+          <li>Capstone Project</li>
+          <li>School Research</li>
+        </ul>
+      </section>
+
+      <a href="index.html" class="back">← Back to Home</a>
+    </div>
+  </div>
     
 </body>
 </html>
