--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>John Lester Pabustan - Portfolio</title>
+  <link rel="stylesheet" href="lester.css" />
+</head>
+<body>
+  <div class="resume">
+    <div class="header">
+      <div class="photo">
+        <img src="2X2.jpg" alt="Profile Photo">
+      </div>
+      <h1>John <span>Lester</span> Pabustan Tiglao</h1>
+      <p class="role">Game & Web Developer</p>
+    </div>
