--- a/harry.html
+++ b/harry.html
@@ -6,6 +6,59 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+     <div class="resume">
+    <div class="left">
+      <img src="Harry.jpeg" alt="John Harry V. De Guzman">
+      <h2>John Harry V. De Guzman</h2>
+      <h4>UX/UI Designer</h4>
+
+      <section>
+        <h3>Profile</h3>
+        <p>Passionate UX/UI designer with a focus on creating intuitive and visually engaging interfaces. Skilled in Figma, Adobe XD, and responsive web design.</p>
+      </section>
+
+      <section>
+        <h3>Languages</h3>
+        <ul>
+          <li>English</li>
+          <li>Tagalog</li>
+        </ul>
+      </section>
+    </div>
+
+    <div class="right">
+      <h1>John Harry V. De Guzman</h1>
+      <h2>UX/UI Designer | Creative Problem Solver</h2>
+
+      <section>
+        <h3>Education</h3>
+        <ul>
+          <li><strong>Tarlac State University</strong> – BS Information Technology</li>
+          <li><strong>Senior High School</strong> – ICT Track</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Computer Skills</h3>
+        <ul>
+          <li>UI/UX Design (Figma, Adobe XD, Canva)</li>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Responsive Web & Mobile Prototyping</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Work Experience</h3>
+        <ul>
+          <li>Freelance UX/UI Designer – Designed intuitive interfaces for mobile and web apps.</li>
+          <li>Intern, Web Development – Assisted in front-end design and usability testing.</li>
+        </ul>
+      </section>
+
+      <a href="index.html" class="back">← Back to Home</a>
+    </div>
+  </div>
+
 </body>
 </html>
