--- a/harry.html
+++ b/harry.html
@@ -1,13 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>John Harry V. De Guzman | UX/UI Designer</title>
+  <style>
+ 
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: #0b0c10;
+      color: #e5e5e5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 30px;
+    }
+
+    .resume {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 950px;
+      width: 100%;
+      background: #1a1c20;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
+      transition: all 0.3s ease;
+    }
+
+    .resume:hover {
+      box-shadow: 0 0 45px rgba(0, 255, 255, 0.4);
+    }
+
+    .left {
+      background: linear-gradient(180deg, #0f2027, #203a43, #2c5364);
+      width: 35%;
+      padding: 40px 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .left img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid cyan;
+      box-shadow: 0 0 15px cyan;
+      margin-bottom: 20px;
+      transition: 0.3s;
+    }
+
+    .left img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px cyan;
+    }
+
+    .left h2 {
+      font-size: 20px;
+      color: #fff;
+      margin-bottom: 10px;
+    }
+
+    .left h4 {
+      font-size: 14px;
+      color: #0ff;
+      letter-spacing: 1px;
+      margin-bottom: 25px;
+    }
+
+    .left section {
+      width: 100%;
+      margin-top: 25px;
+    }
+
+    .left h3 {
+      font-size: 14px;
+      color: cyan;
+      text-transform: uppercase;
+      margin-bottom: 10px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      padding-bottom: 5px;
+    }
+
+    .left p, .left li {
+      font-size: 13px;
+      color: #ddd;
+      margin: 5px 0;
+      line-height: 1.5;
+    }
+
+    .left ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .right {
+      width: 65%;
+      padding: 40px;
+      background: #131416;
+    }
+
+    .right h1 {
+      font-size: 28px;
+      color: cyan;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .right h2 {
+      font-size: 16px;
+      color: #aaa;
+      margin-bottom: 30px;
+    }
+
+    .right section {
+      margin-bottom: 30px;
+    }
+
+    .right h3 {
+      color: cyan;
+      font-size: 16px;
+      text-transform: uppercase;
+      border-bottom: 2px solid cyan;
+      display: inline-block;
+      padding-bottom: 4px;
+      margin-bottom: 10px;
+    }
+
+    .right ul {
+      padding-left: 20px;
+      line-height: 1.7;
+    }
+
+    .right li {
+      margin-bottom: 6px;
+    }
+
+    a.back {
+      display: inline-block;
+      text-align: center;
+      text-decoration: none;
+      color: cyan;
+      border: 1px solid cyan;
+      border-radius: 8px;
+      padding: 8px 16px;
+      transition: 0.3s;
+    }
+
+    a.back:hover {
+      background: cyan;
+      color: #000;
+      box-shadow: 0 0 10px cyan;
+    }
+
+    @media (max-width: 768px) {
+      .resume {
+        flex-direction: column;
+      }
+
+      .left, .right {
+        width: 100%;
+      }
+
+      .right {
+        padding: 30px 20px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-     <div class="resume">
+  <div class="resume">
     <div class="left">
       <img src="Harry.jpeg" alt="John Harry V. De Guzman">
       <h2>John Harry V. De Guzman</h2>
