--- a/harry.html
+++ b/harry.html
@@ -182,7 +182,7 @@
 
   <div class="resume">
     <div class="left">
-      <img src="Harry.jpeg" alt="John Harry V. De Guzman">
+      <img src="c:\Users\takuz\Downloads\42255f6d-50da-4012-b013-85906477734d.jpg" alt="John Harry V. De Guzman">
       <h2>John Harry V. De Guzman</h2>
       <h4>UX/UI Designer</h4>
 
